pkg/provider/kubernetes/ingress/fixtures/Ingress-with-IPv6-endpoints-externalname-enabled_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: example.com
  namespace: testing

spec:
  rules:
    - http:
        paths:
          - path: /foo
            backend:
              service:
                name: service-foo
                port:
                  number: 8080
            pathType: Prefix
